--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,23 @@
+@tailwind base;
+
+/* Write your own custom base styles here */
+
+/* Start purging... */
+@tailwind components;
+/* Stop purging. */
+
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    @apply bg-gray-100 dark:bg-gray-800;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+/* Write your own custom component styles here */
+.btn-blue {
+    @apply px-4 py-2 font-bold text-white bg-blue-600 hover:bg-blue-800 rounded;
 }
 
-* {
-  box-sizing: border-box;
-}
+/* Start purging... */
+@tailwind utilities;
+/* Stop purging. */
+
+/* Your own custom utilities */
