--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -8,3 +8,8 @@
         ring-2 ring-red-600 
         focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent rounded;
 }
+
+div.love span::before {
+    content: '\A';
+    white-space: pre;
+}
